# amplifier-module-tool-stt-whispercpp

./: README.md  pyproject.toml
src/amplifier_module_tool_stt_whispercpp/: __init__.py  models.py  tool.py
tests/: test_tool.py
