[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-tool-stt-whispercpp"
version = "0.1.0"
description = "Amplifier tool module for local speech-to-text using whisper.cpp"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Amplifier Community" }
]
keywords = ["amplifier", "speech-to-text", "whisper", "transcription", "stt", "tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "amplifier-core>=0.1.0",
    "pywhispercpp>=1.3.0",
    "av>=10.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.entry-points."amplifier.modules"]
tool-stt-whispercpp = "amplifier_module_tool_stt_whispercpp:mount"

[project.urls]
Homepage = "https://github.com/sadlilas/amplifier-module-tool-stt-whispercpp"
Repository = "https://github.com/sadlilas/amplifier-module-tool-stt-whispercpp"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_module_tool_stt_whispercpp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
